--- a/boring-lecture.html
+++ b/boring-lecture.html
@@ -8,28 +8,36 @@
   <body>
     <h1>The Physics of a Stump</h1>
     <img src="img/stump.jpg" alt="" class="intro">
-    <h2 class="intro">Learning about Tree Stumps and Physics</h2>
-      <p class="intro">Isn't it about time that we took a closer look at something mind numbingly boring that no one
+    <div class="heading">
+    <h2>Learning about Tree Stumps and Physics</h2>
+    </div>
+    <div class="intro">
+      <p>Isn't it about time that we took a closer look at something mind numbingly boring that no one
         cares about like tree stumps?  These tree stumps are so boring you'll be unable to control yourself.
         Flee in terror, there is nowhere you are safe from the absolute boredom.</p>
+    </div>
+    <div class="heading">
     <h3>What can we learn about ourselves and the world around us from a chopped down tree.</h3>
+    </div>
+    <div class="details">
       <p>First of all, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
         voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p>Secondly, and most interestingly, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+        ut labore et dolore magna aliqua. <span class="special">Ut enim ad minim veniam, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint</span> occaecat cupidatat
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <p>This means that Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+      <p>This means that Lorem ipsum dolor<span class="special"> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+        ut labore et dolore magna aliqua. Ut enim ad minim veniam</span>, quis nostrud exercitation ullamco
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
         voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
         non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p>In conclusion, Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
         doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
         quasi architecto beatae vitae dicta sunt explicabo.</p>
+    </div>
   </body>
 </html>
